<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        android:orderInCategory="1"/>
    <item android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        android:orderInCategory="1"/>
    <item android:id="@+id/mediaFragment"
        android:icon="@drawable/ic_media"
        android:title="@string/menu_media"
        android:orderInCategory="1"/>
    <item android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite"
        android:orderInCategory="1"/>
    <item android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history"
        android:orderInCategory="1"/>
</menu>